--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "jquery": "^3.5.1",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.2",
     "scss-loader": "0.0.1",
