--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.5.2",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "sass": "^1.26.10",
     "sass-loader": "^10.0.2",
     "scss-loader": "0.0.1",
