--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "sass": "^1.26.10",
     "sass-loader": "^10.0.2",
     "scss-loader": "0.0.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
